# Simple-Social

./: main.py  pyproject.toml  test.db
app/: app.py  users.py
